Adjusted header and footer.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,20 +2,23 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">{{ site.title | escape }}</h2>
+    <h2 class="footer-heading">Contact and more</h2>
 
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
-          <li>
+          	<li>
             {% if site.author %}
               {{ site.author | escape }}
             {% else %}
               {{ site.title | escape }}
             {% endif %}
             </li>
-            {% if site.email %}
-            <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+            {% if site.address %}
+						<li> {{ site.address | escape }} </li>
+            {% endif %}
+            {% if site.phone %}
+						<li> {{ site.phone | escape }} </li>
             {% endif %}
         </ul>
       </div>
@@ -25,6 +28,12 @@
           {% if site.github_username %}
           <li>
             {% include icon-github.html username=site.github_username %}
+          </li>
+          {% endif %}
+          
+					{% if site.linkedin_username %}
+          <li>
+            {% include icon-linkedin.html username=site.linkedin_username %}
           </li>
           {% endif %}
 
@@ -37,7 +46,9 @@
       </div>
 
       <div class="footer-col footer-col-3">
-        <p>{{ site.description | escape }}</p>
+        <ul class="contact-list">
+        <li> {{ site.email | escape}} </li>
+        </ul>
       </div>
     </div>
 
