--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -2,10 +2,12 @@
 layout: default
 ---
 
-<div class="home">
-
-  <h1 class="page-heading">Posts</h1>
+  <header class="post-header">
+    <h1 class="post-title">Blog</h1>
+  </header>
   
+  {%- if site.posts.size > 0 -%}
+
   {{ content }}
 
   <ul class="post-list">
@@ -23,4 +25,8 @@ layout: default
 
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
 
-</div>
+  {%- else -%}
+
+  <p> There are currently no blog posts publicly available. </p>
+
+  {%- endif -%}
