--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,54 +4,62 @@
 
     <h2 class="footer-heading">Contact and more</h2>
 
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          	<li>
-            {% if site.author %}
-              {{ site.author | escape }}
-            {% else %}
-              {{ site.title | escape }}
-            {% endif %}
+    <div class=footer-col-wrapper>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <ul class="contact-list">
+              <li>
+              {% if site.author %}
+                {{ site.author | escape }}
+              {% else %}
+                {{ site.title | escape }}
+              {% endif %}
+              </li>
+              {% if site.address %}
+              <li> {{ site.address | escape }} </li>
+              {% endif %}
+              {% if site.phone %}
+              <li> {{ site.phone | escape }} </li>
+              {% endif %}
+          </ul>
+        </div>
+
+        <div class="col-sm-4">
+          <ul class="contact-list">
+          <li> {{ site.email | escape}} </li>
+          </ul>
+        </div>
+
+        <div class="col-sm-4">
+          <ul class="social-media-list">
+            {% if site.github_username %}
+            <li>
+              {% include icon-github.html username=site.github_username %}
             </li>
-            {% if site.address %}
-						<li> {{ site.address | escape }} </li>
             {% endif %}
-            {% if site.phone %}
-						<li> {{ site.phone | escape }} </li>
+            
+            {% if site.linkedin_username %}
+            <li>
+              {% include icon-linkedin.html username=site.linkedin_username %}
+            </li>
             {% endif %}
-        </ul>
-      </div>
 
-      <div class="footer-col footer-col-2">
-        <ul class="social-media-list">
-          {% if site.github_username %}
-          <li>
-            {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %}
-          
-					{% if site.linkedin_username %}
-          <li>
-            {% include icon-linkedin.html username=site.linkedin_username %}
-          </li>
-          {% endif %}
+            {% if site.twitter_username %}
+            <li>
+              {% include icon-twitter.html username=site.twitter_username %}
+            </li>
+            {% endif %}
 
-          {% if site.twitter_username %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username %}
-          </li>
-          {% endif %}
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <ul class="contact-list">
-        <li> {{ site.email | escape}} </li>
-        </ul>
+            {% if site.scholar %}
+            <li>
+              {% include icon-scholar.html %}
+            </li>
+            {% endif %}
+          </ul>
+        </div>
       </div>
     </div>
-
+    </div>
   </div>
-
 </footer>
