--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+<div class="publication">
 
   <header class="post-header">
 	  <h1 class="post-title">{{ page.title }}</h1>
@@ -26,4 +26,4 @@ layout: default
   <a href="{{ page.ref-code }}">[code]</a>
   {% endif %}
 
-</article>
+</div>
