--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -1,29 +1,38 @@
 ---
 layout: default
 ---
-<div class="publication">
+
+<div class="text-center">
 
   <header class="post-header">
-	  <h1 class="post-title">{{ page.title }}</h1>
+	  <h2 class="page-title">{{ page.title }}</h2>
+	  <h5> 
+      {% for author in page.ref-authors %}
+      {% if author == "me" %}F. Dümbgen{% else %}{{ author }}{% endif %}<span class="tab">
+      {% endfor %}
+    <h5>
+    <h5> {{ page.ref-journal }}, {{ page.ref-year }} </h5>
+    </p>
   </header>
+
 
   {% if page.image %}
   <img src="/assets/images/{{ page.image }}" class="img-fluid" alt="{{ page.image-alt}}"/>
   {% endif %}
 
-  <div class="page-content" itemprop="articleBody">
-    <b> Abstract: </b>
-    {{ content }}
-  </div>
-
-  {% if page.ref-link %}
-  <a href="{{ page.ref-link }}">[link]</a>
-  {% endif %}
-  {% if page.ref-video %}
-  <a href="{{ page.ref-video }}">[video]</a>
-  {% endif %}
-  {% if page.ref-code %}
-  <a href="{{ page.ref-code }}">[code]</a>
-  {% endif %}
-
 </div>
+
+<p class="text-justify">
+  {{ content }}
+</p>
+
+{% if page.ref-link %}
+<a href="{{ page.ref-link }}">[link]</a>
+{% endif %}
+{% if page.ref-video %}
+<a href="{{ page.ref-video }}">[video]</a>
+{% endif %}
+{% if page.ref-code %}
+<a href="{{ page.ref-code }}">[code]</a>
+{% endif %}
+
