--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -27,12 +27,12 @@ layout: default
 </p>
 
 {% if page.ref-link %}
-<a href="{{ page.ref-link }}">[link]</a>
+<a href="{{ page.ref-link }}">[Paper]</a>
 {% endif %}
 {% if page.ref-video %}
-<a href="{{ page.ref-video }}">[video]</a>
+<a href="{{ page.ref-video }}">[Video]</a>
 {% endif %}
 {% if page.ref-code %}
-<a href="{{ page.ref-code }}">[code]</a>
+<a href="{{ page.ref-code }}">[Code]</a>
 {% endif %}
 
