--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -8,28 +8,7 @@ layout: default
 
 {{ content }}
 
-<ul class="publication-list">
-  {% assign sorted = (site.publications | sort: 'year') | reverse %}
-  {% for post in sorted %}
-    <li> <p> 
-      {% for author in post.ref-authors %}
-      {% if author == "F. Dümbgen" %}<u>{% endif %}
-      {{ author }},
-      {% if author == "F. Dümbgen" %}</u>{% endif %}
-      {% endfor %}
-      <a href="{{ post.url | relative_url }}"><b>{{ post.title | escape }}</b></a>, {{ post.ref-journal }}, {{ post.ref-year }}. 
-    </p>
-    <p>
-    {% if post.ref-link %}
-    <a href="{{ post.ref-link }}">[link]</a>
-    {% endif %}
-    {% if post.ref-video %}
-    <a href="{{ post.ref-video }}">[video]</a>
-    {% endif %}
-    {% if post.ref-code %}
-    <a href="{{ post.ref-code }}">[code]</a>
-    {% endif %}
-    </li>
-    </p>
-  {% endfor %}
-</ul>
+{% assign sorted = (site.publications | sort: 'ref-year') | reverse %}
+{% for post in sorted %}
+{% include publication_card.html post=post %}
+{% endfor %}
