--- a/_includes/publication_card.html
+++ b/_includes/publication_card.html
@@ -4,7 +4,7 @@
     <div class="col-xs-2">
 			{% if post.image %}
 			<a href="{{ post.url | relative_url }}">
-      <img src="/assets/images/{{ post.image }}" class="card-img" alt="{{ post.image-alt }}" 
+      <img src="/assets/images/publications/{{ post.image }}" class="card-img" alt="{{ post.image-alt }}" 
       style="object-fit:cover; object-position: 0 0; height:100px">
 			</a>
 			{% endif %}
