Fix image paths

--- a/_includes/research_card.html
+++ b/_includes/research_card.html
@@ -3,7 +3,7 @@
     <div class="text-center">
     <div class="col-sm-4">
 			{% if post.image %}
-      <img src="/assets/images/{{ post.image }}" class="card-img" alt="{{ post.image-alt }}" 
+      <img src="/assets/images/research/{{ post.image }}" class="card-img" alt="{{ post.image-alt }}" 
       style="max-height:300px;">
 			{% endif %}
     </div>
