--- a/_includes/icon-github.html
+++ b/_includes/icon-github.html
@@ -1,4 +1,4 @@
 <a href="https://github.com/{{ include.username }}">
   <span class="icon icon--github">{% include icon-github.svg %}</span>
-  <span class="username">{{ include.username }}</span>
+  <span class="username">Github</span>
 </a>
