--- a/_includes/icon-linkedin.html
+++ b/_includes/icon-linkedin.html
@@ -1,4 +1,4 @@
 <a href="https://www.linkedin.com/in/{{ include.username }}">
 	<span class="icon  icon--linkedin">{% include icon-linkedin.svg %}</span>
-	<span class="username">{{ include.username }}</span>
+	<span class="username">Linkedin</span>
 </a>
