--- a/_layouts/research.html
+++ b/_layouts/research.html
@@ -10,7 +10,7 @@ layout: default
 
 <hr style="width:100%; margin-top:0.2em; margin-bottom:0.5em">
 
-{% assign sorted_research = (site.research | sort: 'date') | reverse %}
+{% assign sorted_research = site.research | sort: 'date' | reverse %}
 {% for post in sorted_research %}
 {% include research_card.html post=post %}
 {% endfor %}
