--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -17,7 +17,7 @@ layout: default
 
 
   {% if page.image %}
-  <img src="/assets/images/{{ page.image }}" class="img-fluid" alt="{{ page.image-alt}}"
+  <img src="/assets/images/publications/{{ page.image }}" class="img-fluid" alt="{{ page.image-alt}}"
   style="max-width:70%"/>
   {% endif %}
 
