--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,3 +15,20 @@
   {% endif %} 
 
 </head>
+
+<!-- MathJax script -->
+<script type="text/javascript">
+    window.MathJax = {
+            tex: {
+                      inlineMath: [['$', '$'], ['\\(', '\\)']],
+                      displayMath: [['$$', '$$'], ['\\[', '\\]']],
+                      packages: {'[+]': ['ams']}
+                    },
+            svg: {
+                      fontCache: 'global'
+                    }
+          };
+</script>
+<script type="text/javascript" id="MathJax-script" async
+                                 src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js">
+</script>
