Add new blogpost

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -8,6 +8,10 @@ layout: default
 
 {{ content }}
 
+<p><i>This blog exists because it helps me understand certain concepts, because it is a way to archive some thoughts and ideas, and because I hope that it will create meaningful exchanges. Therfore, please do get in touch if you have any questions, comments or suggestions! </i>
+</p>
+</br>
+
 {% assign psize = site.posts | size %}
 {% if psize > 0 %}
 
