--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="site-title" href="{{ "/" | relative_url }}"> {{ site.title | escape }}</a>
+        <a class="site-title small-header" href="{{ "/" | relative_url }}"> {{ site.title | escape }}</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
