deploy: b9cefd7666ba71153eea1f5285944141c2ae6b7f

--- a/assets/main.css
+++ b/assets/main.css
@@ -2704,4 +2704,6 @@ button.close { padding: 0; cursor: pointer; background: transparent; border: 0; 
 
 .example-box h4 { margin-top: 0; color: #2196F3; }
 
+.small-header { font-size: 1.5rem; }
+
 /*# sourceMappingURL=main.css.map */
